--- a/frontend/src/pages/App.module.scss
+++ b/frontend/src/pages/App.module.scss
@@ -1,6 +1,10 @@
 .main {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 100vh;
+    padding-top: 40vh;
 }
+
+.btn {}
